[gd_scene load_steps=10 format=2]

[ext_resource path="res://Friends/Friends.gd" type="Script" id=1]
[ext_resource path="res://fonts/Graduate-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fade_in/FadeIn.tscn" type="PackedScene" id=3]
[ext_resource path="res://Friends/FriendsPopup.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.109804, 0.254902, 0.0196078, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.109804, 0.254902, 0.0196078, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.109804, 0.254902, 0.0196078, 1 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 2 )

[node name="Friends" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowsH" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -36.0
margin_bottom = -40.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowsV" type="VBoxContainer" parent="WindowsH"]
margin_left = 2.0
margin_right = 1202.0
margin_bottom = 640.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NavBar" type="HBoxContainer" parent="WindowsH/WindowsV"]
margin_right = 1200.0
margin_bottom = 60.0
rect_min_size = Vector2( 1200, 60 )
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FriendsListBtn" type="Button" parent="WindowsH/WindowsV/NavBar"]
margin_right = 397.0
margin_bottom = 60.0
size_flags_horizontal = 3
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
pressed = true
text = "Friends List"

[node name="FriendRequestListBtn" type="Button" parent="WindowsH/WindowsV/NavBar"]
margin_left = 401.0
margin_right = 798.0
margin_bottom = 60.0
size_flags_horizontal = 3
custom_styles/pressed = SubResource( 2 )
toggle_mode = true
text = "Friend Request List"

[node name="WaitingListBtn" type="Button" parent="WindowsH/WindowsV/NavBar"]
margin_left = 802.0
margin_right = 1200.0
margin_bottom = 60.0
size_flags_horizontal = 3
custom_styles/pressed = SubResource( 3 )
toggle_mode = true
text = "Waiting List"

[node name="MarginContainer" type="MarginContainer" parent="WindowsH/WindowsV"]
margin_top = 64.0
margin_right = 1200.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 20 )

[node name="HBoxContainer" type="HBoxContainer" parent="WindowsH/WindowsV"]
margin_top = 88.0
margin_right = 1200.0
margin_bottom = 102.0

[node name="HBoxContainer2" type="HBoxContainer" parent="WindowsH/WindowsV/HBoxContainer"]
margin_right = 397.0
margin_bottom = 14.0
size_flags_horizontal = 3
alignment = 1

[node name="EmailLbl" type="Label" parent="WindowsH/WindowsV/HBoxContainer/HBoxContainer2"]
margin_left = 181.0
margin_right = 216.0
margin_bottom = 14.0
text = "Email"

[node name="HBoxContainer3" type="HBoxContainer" parent="WindowsH/WindowsV/HBoxContainer"]
margin_left = 401.0
margin_right = 798.0
margin_bottom = 14.0
size_flags_horizontal = 3
alignment = 1

[node name="PseudoLbl" type="Label" parent="WindowsH/WindowsV/HBoxContainer/HBoxContainer3"]
margin_left = 175.0
margin_right = 222.0
margin_bottom = 14.0
text = "Pseudo"

[node name="HBoxContainer4" type="HBoxContainer" parent="WindowsH/WindowsV/HBoxContainer"]
margin_left = 802.0
margin_right = 1200.0
margin_bottom = 14.0
size_flags_horizontal = 3
alignment = 1

[node name="ActionLbl" type="Label" parent="WindowsH/WindowsV/HBoxContainer/HBoxContainer4"]
margin_left = 171.0
margin_right = 227.0
margin_bottom = 14.0
text = "Action(s)"

[node name="MarginContainer3" type="MarginContainer" parent="WindowsH/WindowsV"]
margin_top = 106.0
margin_right = 1200.0
margin_bottom = 126.0
rect_min_size = Vector2( 0, 20 )

[node name="Content" type="HBoxContainer" parent="WindowsH/WindowsV"]
margin_top = 130.0
margin_right = 1200.0
margin_bottom = 552.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NoData" type="Label" parent="WindowsH/WindowsV/Content"]
visible = false
margin_top = 204.0
margin_right = 1200.0
margin_bottom = 218.0
size_flags_horizontal = 3
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="WindowsH/WindowsV/Content"]
margin_right = 1200.0
margin_bottom = 422.0
rect_min_size = Vector2( 1200, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FriendLine" type="VBoxContainer" parent="WindowsH/WindowsV/Content/ScrollContainer"]
margin_right = 1200.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="WindowsH/WindowsV"]
margin_top = 556.0
margin_right = 1200.0
margin_bottom = 576.0
rect_min_size = Vector2( 0, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="WindowsH/WindowsV"]
margin_top = 580.0
margin_right = 1200.0
margin_bottom = 640.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
size_flags_vertical = 5
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="WindowsH/WindowsV/Buttons"]
margin_left = 475.0
margin_right = 725.0
margin_bottom = 60.0
rect_min_size = Vector2( 250, 0 )

[node name="BackBtn" type="Button" parent="WindowsH/WindowsV/Buttons/HBoxContainer"]
margin_right = 123.0
margin_bottom = 60.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0.188235, 0, 1 )
text = "BACK"

[node name="AddBtn" type="Button" parent="WindowsH/WindowsV/Buttons/HBoxContainer"]
margin_left = 127.0
margin_right = 250.0
margin_bottom = 60.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.266667, 1, 0, 1 )
text = "ADD"

[node name="FadeIn" parent="." instance=ExtResource( 3 )]
visible = false

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="FriendsPopup" parent="." instance=ExtResource( 4 )]
visible = false
[connection signal="pressed" from="WindowsH/WindowsV/NavBar/FriendsListBtn" to="." method="_on_FriendsListBtn_pressed"]
[connection signal="pressed" from="WindowsH/WindowsV/NavBar/FriendRequestListBtn" to="." method="_on_FriendRequestListBtn_pressed"]
[connection signal="pressed" from="WindowsH/WindowsV/NavBar/WaitingListBtn" to="." method="_on_WaitingListBtn_pressed"]
[connection signal="pressed" from="WindowsH/WindowsV/Buttons/HBoxContainer/BackBtn" to="." method="_on_BackBtn_pressed"]
[connection signal="pressed" from="WindowsH/WindowsV/Buttons/HBoxContainer/AddBtn" to="." method="_on_AddBtn_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
